--- a/src/client.css
+++ b/src/client.css
@@ -1,25 +1,17 @@
-* {
-  box-sizing: border-box;
+*{
+  user-select: none;
 }
 
-body {
+html, body {
   overflow: hidden;
-  padding: 0 15px;
+  padding: 0;
   margin: 0;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+.page-content {
+  padding: 10 20
 }
 
-.input {
-  flex: 1;
-  height: 36px;
-  border: 1px solid #ababab;
-  border-radius: 3px;
-  background: #fff;
-  font-size: 20px;
-  padding: 0 10px;
+textarea {
+    resize: none !important;
 }
